--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@vuelidate/core": "^2.0.0-alpha.42",
     "@vuelidate/validators": "^2.0.0-alpha.30",
     "@vueuse/core": "^8.7.5",
+    "dayjs": "^1.11.3",
     "firebase": "^9.8.4",
     "pinia": "^2.0.14",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16",
+    "vue-timeago3": "^2.3.0",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-charts": "^1.1.31"
   },
