--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.3",
     "firebase": "^9.8.4",
     "pinia": "^2.0.14",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16",
     "vue-timeago3": "^2.3.0",
